# emergents

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: implement.prompt.md  plan.prompt.md  research.prompt.md
.github/workflows/: ci.yml  dev_deploy.yml  release.yml
emergents/: __init__.py  config.py  file_plotter.py  logging_config.py  mutation_manager.py  population.py  statistics.py
emergents/genome/: coordinates.py  genome.py  node.py  segments.py
emergents/mutations/: base.py  deletion.py  duplication.py  inversion.py  point_mutation.py  small_deletion.py  small_insertion.py
scripts/: setup-labels.sh
src/emergents/: config.py  file_plotter.py  logging_config.py  mutation_manager.py  population.py  simulation_service.py  statistics.py
src/emergents/genome/: coordinates.py  genome.py  node.py  segments.py
src/emergents/mutations/: base.py  deletion.py  duplication.py  inversion.py  point_mutation.py  small_deletion.py  small_insertion.py
tests/: test_base_mutation.py  test_config.py  test_coordinates.py  test_deletion.py  test_duplication.py  test_file_plotter.py  test_genome.py  test_inversion.py  test_logging_config.py  test_mutation_manager.py  test_node.py  test_point_and_small_deletion.py  test_point_mutation.py  test_population.py  test_segments.py  test_simulation_service.py  test_small_deletion.py  test_small_insertion.py  test_statistics.py
