[project]
name = "emergents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.14",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
# E/F: Standard Flake8 rules (syntax errors, undefined variables)
# I:   Isort (import sorting)
# B:   Flake8-Bugbear (catches subtle bugs & design flaws - HIGH VALUE)
# UP:  PyUpgrade (automatically upgrades syntax to newer Python versions)
# N:   PEP8 Naming (function/class naming conventions)
# SIM: Flake8-Simplify (suggests cleaner syntax)
# C4:  Flake8-Comprehensions (optimizes list/dict comprehensions)
# PT:  Flake8-Pytest-Style (enforces better pytest practices)
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4", "PT"]

# Allow fixing these specific rules automatically
fixable = ["ALL"]

# Ignore specific rules that might be too noisy for your specific team style
# E501: Line too long (Ruff's formatter handles this well usually, strict linting is annoying)
ignore = ["E501"]

[tool.ruff.lint.isort]
# Ensure imports are grouped correctly (Standard Lib -> Third Party -> Local)
combine-as-imports = true
known-first-party = ["emergents"] # CHANGE THIS to your package name

[tool.ruff.format]
# Use double quotes for strings (standard)
quote-style = "double"
# Indent with spaces, not tabs
indent-style = "space"

[tool.pytest.ini_options]
# Min version to ensure modern features
minversion = "8.0"

# CLI Options:
# -ra: Show extra test summary info for (r)skipped, (f)ailed, (E)rror
# -q: Quiet mode (less noise)
# --strict-markers: error if you use an unregistered marker (prevents typos)
# --cov: Enable coverage by default
# -n auto: Use all available CPU cores (pytest-xdist)
addopts = "-ra -q --strict-markers --cov=src --cov-report=xml --cov-report=term-missing -n auto"

# Where to look for tests
testpaths = ["tests"]

# Define custom markers here to avoid "unknown marker" warnings
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

# Fail if coverage drops below 90%
[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
